--- a/Andrei_Drabkin_overfitting_regularization.ipynb
+++ b/Andrei_Drabkin_overfitting_regularization.ipynb
@@ -3635,8 +3635,7 @@
     "Сформированы таблицы в виде Дата-фреймов для обоих способов регуляризации (L1 & L2), содержащие величины коэффициентов (весов) обеих регрессий для соответствующих величин alpha из списка ALPHAS. Из них видно следующее:  \n",
     "- действительно, Lasso регрессия зануляет ряд коэффициентов;\n",
     "- количество (не-)нулевых коэффициентов изменяется до некоторого значения alpha, после которого становится постоянным;\n",
-    "- в то же время набор коэффициентов Ridge регрессии всегда полный - нулевые коэффициенты отсутствуют (кроме самого первого) вне зависимости от величины alpha;\n",
-    "- в обеих регрессиях есть постоянный нулевой коэффициент в начале списка весов - это коэффициент, присваиваемый первому параметру в X, т.к. она везде константа и равен единице.  \n",
+    "- в то же время набор коэффициентов Ridge регрессии всегда полный - нулевые коэффициенты отсутствуют (кроме самого первого) вне зависимости от величины alpha.  \n",
     "\n",
     "Для визуализации вышеописанного построены графики зависимости количества (не-)нулевых коэффициентов от параметра alpha для каждой из регрессий (Lasso & Ridge)."
    ]
